Attempt to fix nav overlap

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -11,7 +11,7 @@ html {
 body {
   margin: 0;
   padding: 85px 0 0;
-  color: $text-color;
+  color: #494e52;
   font-family: $global-font-family;
   line-height: 1.5;
 
